# perf-sxs-cli

./: .gitignore  .pre-commit-config.yaml  README.md  analyze.py  perf_sxs.py  pyproject.toml  requirements.txt  viewer.py
.claude/commands/: analyze-perf-videos.md
.claude/skills/analyze-perf-videos/: SKILL.md
.github/workflows/: ci.yml
templates/: viewer.html
tests/: __init__.py  test_perf_sxs.py  test_viewer.py
