[project]
name = "perf-sxs-cli"
version = "0.1.0"
description = "Async Python tool for downloading and comparing browsertime videos from Mozilla Try pushes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MPL-2.0" }
authors = [
    { name = "Mozilla Firefox Performance Team" }
]
dependencies = [
    "aiohttp>=3.9.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may require network/files)",
]
addopts = "-v --tb=short"

[tool.uv]
python-preference = "managed"
