[project]
name = "perf-sxs-cli"
version = "0.1.0"
description = "Async Python tool for downloading and comparing browsertime videos from Mozilla Try pushes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
authors = [
    { name = "Mozilla Firefox Performance Team" }
]
dependencies = [
    "aiohttp>=3.9.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may require network/files)",
]
addopts = "-v --tb=short"

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # Allow function/argument naming in tests

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
